# qb

./: .cursorignore  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml  openapi.json
.cursor/: subagent-prompts.md
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  SPARK_DOCS.md  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: README.md  config.py  dependencies.py  exceptions.py  main.py  spark_session.py  spark_tables.py  utils.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: backend.py  compile.py  compile_sql.py  health.py  orders.py  products.py  query.py  users.py
backend/app/api/v1/schemas/: crud.py  health.py  query.py
backend/app/middleware/: security.py
backend/app/models/: column.py  condition.py  query.py
backend/app/query_builder/: __init__.py  query_builder.py  spark_query.py  spark_renderer.py
backend/app/repositories/: echo_repository.py  ibis_repository.py  json_ibis_repository.py  memory_repository.py  query_repository.py  raw_ibis_repository.py  spark_repository.py
backend/app/services/: base.py  condition_builder.py  crud_service.py  query_compiler.py  query_service.py  validation_service.py
backend/docs/: SPARK_PYSPARK_VERSIONS.md  SPARK_TABLES.md
backend/tests/: cases.py  conftest.py  data.py  fake_spark_repository.py  test_concurrency.py  test_crud.py  test_echo.py  test_query.py  test_query_repository.py  test_query_templates_scenarios.py
docs/: spark-query-examples.md  user-scenarios.md
frontend/: Dockerfile  next.config.mjs  (+5 more)
(+61 files in other folders)
